--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -5,16 +5,17 @@
     <title>채팅방 목록</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!--    <script th:src="@{/js/common.js}"></script>-->
     <script th:src="@{/js/chat/chat-rooms.js}"></script>
     <link th:href="@{/css/chat/chat-rooms.css}" rel="stylesheet">
 
 </head>
 <body>
-<h2>채팅방 목록</h2>
+<h2></h2>
 
 <div>
     <input type="text" id="roomName" placeholder="채팅방 이름 입력">
-    <button onclick="createRoom()">방 만들기</button>
+    <button onclick="createRoom()">채팅방 만들기</button>
 </div>
 
 <hr>
