--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -5,13 +5,16 @@
     <title>채팅방 목록</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 <!--    <script th:src="@{/js/common.js}"></script>-->
-    <script th:src="@{/js/chat/chat-rooms.js}"></script>
+    <script th:src="@{/js/chat-rooms.js}"></script>
+
     <link th:href="@{/css/chat/chat-rooms.css}" rel="stylesheet">
 
 </head>
 <body>
-<h2></h2>
+<h2>SAND-IT 톡</h2>
 
 <div>
     <input type="text" id="roomName" placeholder="채팅방 이름 입력">
